--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "testServer": "1088457641166131230",
-    "clientId": "1367189376181866587",
-    "devs": ["740993905620942908"]
+    "testServer": "Your server id's here",
+    "clientId": "Your bot id's here",
+    "devs": ["Your id's here"]
 }
